# Mesh_Deformation_Transfer

./: CMakeLists.txt  README.md  main.cpp
data/cat/: cat_markers.txt
data/lion/: lion_markers.txt
include/: deform_transfer.h
src/: deform_transfer.cpp
